<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_subjects">

    <fragment
        android:id="@+id/navigation_subscribe"
        android:name="com.discussionforum.discussionforum.ui.subscribe.SubscribeFragment"
        android:label="@string/title_subscribe"
        tools:layout="@layout/fragment_subscribe" />

    <fragment
        android:id="@+id/navigation_subjects"
        android:name="com.discussionforum.discussionforum.ui.subject.SubjectFragment"
        android:label="@string/title_subjects"
        tools:layout="@layout/fragment_subjects" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.discussionforum.discussionforum.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
