<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/colorWًhite"
    tools:context=".Subscribe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/ic_mention"/>

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/profile"
                android:fontFamily="@font/tajawal_tegular"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/_20sdp"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/tajawal_tegular"
                android:background="@drawable/subscribe_fields"
                android:hint="@string/user_name"
                android:textColor="@color/colorMain"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"/>

            <EditText
                android:id="@+id/list_name"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/tajawal_tegular"
                android:background="@drawable/subscribe_fields"
                android:hint="@string/list_name"
                android:textColor="@color/colorMain"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/tajawal_tegular"
                android:background="@drawable/subscribe_fields"
                android:hint="@string/user_location"
                android:textColor="@color/colorMain"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"/>

            <EditText
                android:id="@+id/user_age"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/tajawal_tegular"
                android:background="@drawable/subscribe_fields"
                android:hint="@string/user_age"
                android:textColor="@color/colorMain"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"/>


            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_marginTop="@dimen/_13sdp"
                 android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:fontFamily="@font/tajawal_tegular"
                    android:text="@string/gender"
                    android:textColor="@color/colorMain"
                    android:textSize="@dimen/_15sdp" />

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tajawal_tegular"
                        android:text="@string/male"
                        android:layout_gravity="right"
                        android:textColor="@color/colorMain"
                        android:textSize="@dimen/_15sdp" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="-35dp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/tajawal_tegular"
                        android:text="@string/female"
                        android:textColor="@color/colorMain"
                        android:textSize="@dimen/_15sdp" />


             </LinearLayout>

            <Button
                android:id="@+id/subscribe_button"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_45ssp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/tajawal_tegular"
                android:background="@drawable/start_button"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/subscribe_button"
                android:textColor="@color/colorWًhite"
                android:textSize="@dimen/_15sdp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>