<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/colorWًhite"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_250sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/ic_online_discussion_5wgl"/>

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/welcome_text"
                android:fontFamily="@font/tajawal_tegular"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/_20sdp"/>

            <TextView
                android:id="@+id/descration_app"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/descration_app"
                android:fontFamily="@font/tajawal_tegular"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/start_button"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_45ssp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/tajawal_tegular"
                android:background="@drawable/start_button"
                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/start"
                android:textColor="@color/colorWًhite"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_7sdp"
                android:fontFamily="@font/tajawal_tegular"
                android:text="@string/subscribe"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/_14sdp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>