<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/colorWًhite"
    tools:context=".ui.subscribe.SubscribeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/ic_mention"/>


            <EditText
                android:id="@+id/subject_title"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/tajawal_tegular"
                android:background="@drawable/subscribe_fields"
                android:hint="@string/subject_title"
                android:textColor="@color/colorMain"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"/>

            <EditText
                android:id="@+id/suject_data"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/tajawal_tegular"
                android:background="@drawable/subscribe_fields"
                android:hint="@string/bio"
                android:textColor="@color/colorMain"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"/>

             <Button
                android:id="@+id/subscribe_button"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_45ssp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/tajawal_tegular"
                android:background="@drawable/start_button"
                android:drawableEnd="@drawable/ic_playlist_add_black_24dp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/title_subscribe"
                android:textColor="@color/colorWًhite"
                android:textSize="@dimen/_15sdp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>